localrepo/dep1.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: dep1
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: c1
        image: nginx
      volumeMounts:
      - mountPath: /usr/share/nginx/html
        name: myvol
      - name: c2
        image: centos:6
      volumeMounts:
      - mountPath: /usr/share/nginx/html
        name: myvol 
        command: ['/bin/sh','-c','while true;do X=$[$X+1];echo $X > /usr/share/nginx/html/index.html;sleep 1;done']
      volumes:
      - name: myvol
      emptyDir: {}
