localrepo/v1.yaml
apiVersion: v1
kind: Pod
metadata:
  name: v1pod
spec:
  containers:
  - name: c1
    image: nginx
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: myvol
  - name: c2
    image: centos:6
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: myvol 
    command: ['/bin/sh','-c','while true;do X=$[$X+1];echo $X > /usr/share/nginx/html/index.html;sleep 1;done']
  volumes:
  - name: myvol
    emptyDir: {}
