localrepo/v2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: v2pod
spec:
  containers:
  - name: c1
    image: nginx
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: myvol
  - name: c2
    image: centos:6
    volumeMounts:
    - mountPath: /usr/share/nginx/html
      name: myvol 
    command: ['/bin/sh','-c','while true;do X=$[$X+1];echo $X > /usr/share/nginx/html/index.html;sleep 1;done']
  nodeName: gke-ddangi-cluster-default-pool-f3d3fac0-v8v7
  volumes:
  - name: myvol
    hostPath:
      path: /tmp/vol1
      type: Directory
