localrepo/myservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: myloadbalanceservice
  namespace: mynamespace
spec:
  ports:
    - name: http
      port: 80
  selector:
    type: demodeployment
  type: LoadBalancer
