localrepo/myingress.yaml

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: myingress
spec:
  rules:
  - http:
      paths:
      - path: /green.html
        backend:
          serviceName: greenservice
          servicePort: 80
      - path: /yellow.html
        backend:
          serviceName: yellowservice
          servicePort: 80
